# explorer_modules_extension

./: .clang-format  AGENTS.md  CMakeLists.txt  README.md  build.bat
.github/prompts/: create-readme.prompt.md
resources/: namespace.rc
src/: ClassFactory.cpp  DllNotification.cpp  DllNotification.h  EnumIDList.cpp  EnumIDList.h  ExplorerModulesNamespace.def  IidNames.cpp  IidNames.h  ItemContextMenu.cpp  ItemContextMenu.h  Log.cpp  Log.h  ModuleFolder.cpp  ModuleFolder.h  ModuleHelpers.cpp  ModuleHelpers.h  NtDll.h  Pidl.cpp  Pidl.h  dllmain.cpp
